# python-project-lvl2

./: README.md  pyproject.toml
scripts/: gendiff.py
