[tool.poetry]
name = "hexlet_code"
version = "0.1.1"
description = ""
authors = ["Viacheslav <hyppogriff@gmail.com>"]
packages = [
  { include = "scripts" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
gendiff = "scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
